file(GLOB CPP_SOURCES_FINITE_DIFFERENCE_FORWARDMODEL src/*.cpp)
file(GLOB H_HEADERS_FINITE_DIFFERENCE_FORWARDMODEL include/*.h)

set( LIBRARY_INCLUDE_DIRS_FINITE_DIFFERENCE_FORWARDMODEL "${CMAKE_CURRENT_SOURCE_DIR}/include" CACHE INTERNAL "" )
include_directories( ${LIBRARY_INCLUDE_DIRS_FINITE_DIFFERENCE_FORWARDMODEL} )
include_directories( ${LIBRARY_INCLUDE_DIRS_CORE} )

add_library( finite_difference_forwardModel_library ${CPP_SOURCES_FINITE_DIFFERENCE_FORWARDMODEL} ${H_HEADERS_FINITE_DIFFERENCE_FORWARDMODEL} )
target_link_libraries (finite_difference_forwardModel_library Eigen3::Eigen)

